# zzz-forks-cupcake

./: Cargo.toml  flake.nix  justfile  result
.github/workflows/: ci-full.yml  ci.yml
cupcake-py/: Cargo.toml  README.md  pyproject.toml
cupcake-py/python/cupcake/: __init__.py  _installer.py  _native.pyi
cupcake-py/src/: lib.rs
cupcake-py/tests/: conftest.py  test_basic.py
