[workspace]
# Core members that build reliably across all environments
default-members = ["cupcake-core", "cupcake-cli"]
# All members (including optional language bindings)
members = ["cupcake-core", "cupcake-cli", "cupcake-ts", "cupcake-py"]
resolver = "2"

[workspace.package]
version = "0.5.2"
edition = "2021"
authors = ["Cupcake Contributors"]
license = "MIT"

[workspace.dependencies]
# Core dependencies shared across crates
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
thiserror = "2.0.12"

# WASM Runtime
wasmtime = "35.0"

# Async Runtime
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "process", "time", "macros", "fs", "io-util", "io-std", "sync"] }
futures = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
dirs = "5.0"
regex = "1.11.1"
once_cell = "1.20"

# Trust System
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "local-time"] }

# Testing
pretty_assertions = "1.4"
tempfile = "3.0"
insta = "1.35"
criterion = "0.5"

# Internal workspace dependencies
cupcake-core = { path = "cupcake-core" }

# Profile optimizations
[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2
