[project]
name = "cupcake"
version = "0.2.0"
description = "Python bindings for the Cupcake policy engine — governance and safety for AI coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["policy", "governance", "opa", "rego", "ai-safety", "agent", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/eqtylab/cupcake"
Repository = "https://github.com/eqtylab/cupcake"
Documentation = "https://cupcake.eqtylab.io"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Build the native extension module as cupcake._native
module-name = "cupcake._native"
# Python source is in python/ directory
python-source = "python"
# Features to pass to cargo
features = ["pyo3/extension-module"]
# Include the Python package files
include = ["python/cupcake/**/*.py", "python/cupcake/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
